--- a/backup.html
+++ b/backup.html
@@ -1,19 +1,19 @@
 
-	// DECLARATII VARIABILE
-	var url = new URL(window.location.href);
-var limba = url.searchParams.get("limba");
-console.log(limba);
-	var dictionar;
-var dictionar_fr=["blagues","amis","coller","conduire","tracteur","chat","réalisateur","football","rugby","basket-ball","enfant","lait","sirop","ferme","chaise","enfant","grand-père","estomac","avion","aéroport","livre","million","sommeil","verre","ampoule","téléphone","ordinateur","TV","brosse","assiette","interdiction","verre","air","virus","café","jus"]
-var dictionar_en=["jokes","friends","paste","drive","tractor","cat","director","football","rugby","basketball","child","milk","syrup","farm","chair","child","grandfather","stomach","airplane","airport","book","million","sleep","glass","bulb","telephone","computer","TV","brush","plate","ban","glass","air","virus","coffee","juice"]
-var dictionar_ro=["glume","prieteni","paste","volan","tractor","pisica","director","fotbal","rugby","baschet","copil","lapte","sirop","ferma","scaun","copil","bunic","stomac","avion","aeroport","carte","milion","somn","geam","bec","telefon","calculator","televizor","perie","farfurie","ban","pahar","aer","virus","cafea","suc"]
-
-if(limba=="english")dictionar=dictionar_en;
-if(limba=="romana")dictionar=dictionar_ro;
-if(limba=="francais")dictionar=dictionar_fr;
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Jocul Spanzuratoare</h1>
+<canvas id="myCanvas" width="400" height="300" style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.</canvas>
+<span style="background: red;font-size: 2em" id="div-negasite">!</span>
+<div id="divcuvant">test</div>
 
 
+<script>
 
+
+var dictionar=["glume","prieteni","paste","volan","tractor","pisica","director","fotbal","rugby","baschet","copil","lapte","sirop","ferma","scaun","copil","bunic","stomac","avion","aeroport","carte","milion","somn","geam","bec","telefon","calculator","televizor","perie","farfurie","ban","pahar","aer","virus","cafea","suc"]
+// DECLARATII VARIABILE
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 var cuvint=dictionar[	parseInt(Math.random() * dictionar.length)];
@@ -158,44 +158,30 @@ capitol8();
 capitol9();
 capitol10();
 */
-var negasite="";
-var gasite="";
+var arata="";
+//prima litera
+arata+=cuvint[0];
 
-function afisare(){
-	var arata="";
-	var i=0;
-	//prima litera >>>>>>>>>>>>>><
-	arata+=cuvint[0];
-	var amGhicitToateLiterele=true;
-	//liniutele
-	for(i=1;  i < cuvint.length-1;  i++){
-		//scrie litera daca o ghicit-o
-		if(gasite.indexOf( cuvint[i] ) != -1){
-			arata+=""+cuvint[i];
-		} else{
-			amGhicitToateLiterele=false;
-		 arata+=" _";}
-	}
-	if((limba=="english")&&(amGhicitToateLiterele)) alert("won!!!");
-	if((limba=="francais")&&(amGhicitToateLiterele)) alert("gagné!!!");
-	if((limba=="romana")&&(amGhicitToateLiterele)) alert("câstigat!!!")
-	//ultima litera
-	i=cuvint.length-1
-	arata+=""+cuvint[i];
-	document.getElementById("divcuvant").innerText=arata;
+//liniutele
+for(i=1;  i < cuvint.length-1;  i++){
+	arata+=" _";
 }
-afisare();
+
+//ultima litera
+i=cuvint.length-1
+arata+=" "+cuvint[i];
+document.getElementById("divcuvant").innerText=arata;
 
 
+var negasite="";
 function ghiceste(){
+	debugger;
 	var litera=document.getElementById("litera").value;
 	//alert(litera)
-	var gasit = cuvint.indexOf(litera )!= -1;
-	if( gasit ){
+	var conditie = cuvint.indexOf(litera )!= -1;
+	if( conditie ){
 		//l-o gasit
-		///alert("gasit "+litera)
-		gasite+=litera;
-		afisare();
+		alert("gasit "+litera)
 	}else{
 		//NU l-o gasit
 		negasite+=litera;
@@ -214,4 +200,10 @@ function ghiceste(){
 		if( negasite.length==10)alert("GAME OVER")
 	}
 }
-//<<<<<<<<<<<<<<<<<<
+</script>
+<br>
+
+<input type="text" id="litera" value="?" />
+<button onclick="ghiceste()">Ghiceste!</button>
+</body>
+</html>
