--- a/spanzfr.html
+++ b/spanzfr.html
@@ -1,12 +1,10 @@
-# spanz
-hangman
 <!DOCTYPE html>
 <html>
 
         <head>
                 <meta charset="utf-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
-                <title>Material TextField Quick Start</title>
+                <title>Adrian s' website</title>
                 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
                 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
                 <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
@@ -73,3 +71,4 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 </div>
 </body>
 </html>
+
