--- a/spanzen.html
+++ b/spanzen.html
@@ -13,7 +13,7 @@
      
 <body>
 <h1>hangman</h1>
-<canvas id="myCanvas" width="400" height="300" style="border:1px solid #d3d3d3;">
+<canvas id="myCanvas" width="400" height="300" style="border: 4mm ridge rgba(139, 231, 102, 0.6);;">
 Your browser does not support the HTML5 canvas tag.</canvas>
 <span style="background: red;font-size: 2em" id="div-negasite">!</span>
 <div id="divcuvant">test</div>
