--- a/spanzro.html
+++ b/spanzro.html
@@ -15,7 +15,7 @@
 <body>
   <div id="all">
 <h1>Jocul Spanzuratoare</h1>
-<canvas id="myCanvas" width="400" height="300" style="border:1px solid #d3d3d3;">
+<canvas id="myCanvas" width="400" height="300" style="border: 4mm ridge rgba(118, 233, 107, 0.6);;">
 Your browser does not support the HTML5 canvas tag.</canvas>
 <span style="background: red;font-size: 2em" id="div-negasite">!</span>
 <div id="divcuvant">test</div>
