--- a/home.html
+++ b/home.html
@@ -37,8 +37,7 @@
     <span class="mdc-fab__label">OK</span>
   </button>
 
-
-
+  
   <p>choose your language</p>
   <p>alegeti limba</p>
   <p>choisis ta langue</p>
@@ -74,7 +73,14 @@
     <span class="mdc-fab__label">FRANÇAIS</span>
   </button>
 
-     
+  <button class="mdc-fab mdc-fab--extended" 
+  onclick="window.location.href = 'multi.html';" >
+    <div class="mdc-fab__ripple"></div>
+ 
+    <span class="material-icons mdc-fab__icon">class</span>
+    <span class="mdc-fab__label">Multiplication tables</span>
+  </button>
+  
     </button></a>
    
     
