--- a/spanzfr.html
+++ b/spanzfr.html
@@ -14,7 +14,7 @@
               
 <body>
   <div id="all">
-<h1>Jocul Spanzuratoare</h1>
+<h1>Le Pendu</h1>
 <canvas id="myCanvas" width="400" height="300" style="border: 4mm ridge rgba(115, 231, 121, 0.6);">
 Your browser does not support the HTML5 canvas tag.</canvas>
 <span style="background: red;font-size: 2em" id="div-negasite">!</span>
@@ -28,6 +28,12 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 <br>
 
 
+<style>
+  body {background-color: rgb(255, 255, 255);}
+  h1   {color: rgb(84, 146, 117);}
+  p    {color: red;}
+  </style>
+
 
 
 
@@ -39,7 +45,7 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 <label class="mdc-text-field mdc-text-field--filled">
         
       <span class="mdc-text-field__ripple"></span>
-      <span class="mdc-floating-label" id="my-label-id">tastează o literă</span>
+      <span class="mdc-floating-label" id="my-label-id">tapes une lettre</span>
       <input class="mdc-text-field__input" type="text"
        aria-labelledby="my-label-id"  id="litera"/>
       <span class="mdc-line-ripple"></span>
@@ -49,7 +55,7 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 <button class="mdc-fab mdc-fab--extended"   onclick="ghiceste()">
       <div class="mdc-fab__ripple"></div>
       <span class="material-icons mdc-fab__icon">done_outline</span>
-      <span class="mdc-fab__label">ghiceste</span>
+      <span class="mdc-fab__label">devine</span>
     </button>
 
 
@@ -59,7 +65,7 @@ Your browser does not support the HTML5 canvas tag.</canvas>
  onclick="window.location.reload()">
         <div class="mdc-fab__ripple"></div>
         <span class="material-icons mdc-fab__icon">arrow_right_alt</span>
-        <span class="mdc-fab__label">încă o tură</span>
+        <span class="mdc-fab__label">encore un tour</span>
       </button>
 
     </li>
