--- a/spanzro.html
+++ b/spanzro.html
@@ -30,6 +30,12 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 
 
 
+<style>
+  body {background-color: rgb(255, 255, 255);}
+  h1   {color: rgb(84, 146, 117);}
+  p    {color: red;}
+  </style>
+
 
 
 
