--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <label class="mdc-text-field mdc-text-field--filled">
         <span class="material-icons mdc-fab__icon">games</span>
     </label>
-    <button class="mdc-fab mdc-fab--extended" onclick="window.location.href = 'home.html';">
+    <button class="mdc-fab mdc-fab--extended" onclick="window.location.href = 'hangman.html';">
         <div class="mdc-fab__ripple"></div>
 
         
