--- a/hangman.html
+++ b/hangman.html
@@ -1,4 +1,11 @@
 <html>
+
+  <button class="mdc-fab mdc-fab--extended" onclick="window.location.href = 'home.html';">
+        
+    <span class="material-icons mdc-fab__icon">arrow_back_ios_new</span>
+    
+</button>
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
