--- a/spanzro.html
+++ b/spanzro.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 
+  <button class="mdc-fab mdc-fab--extended" onclick="window.location.href = 'hangman.html';">
+        
+    <span class="material-icons mdc-fab__icon">arrow_back_ios_new</span>
+    
+</button>
+
         <head>
                 <meta charset="utf-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
