--- a/home.html
+++ b/home.html
@@ -64,12 +64,14 @@
     
 
 
+<iframe src="https://spanzcomment.blogspot.com/" width="100%" height="900" style="border:none;">
+</iframe>
 
      
 
     <script>mdc.textField.MDCTextField.attachTo(document.querySelector('.mdc-text-field'));</script>
 
-
+ 
 
 </body>
 
