--- a/home.html
+++ b/home.html
@@ -10,8 +10,15 @@
 
 
 
+
+
     
 <head>
+
+
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Adrian's website !</title>
