--- a/home.html
+++ b/home.html
@@ -1,16 +1,5 @@
 
 <html>
-  
-    
-
-
-  
-
-
-
-
-
-
 
     
 <head>
@@ -26,6 +15,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+
 <style>
 #lding{
     position:absolute;
